# zero-shot-cnn-textual-description-reproduction

./: .gitignore  README.md  innovate.sh  main.py  pyproject.toml  reproduce.sh  requirements.txt  train.sh
data/: README.md  __init__.py  dataset.py  download_dataset.py  image_preprocessor.py  preparation.py  sampler.py  strip_class_names.py  text_clip.py  text_clip_multi.py  text_processor.py  text_sbert.py  text_sbert_multi.py
docs/: REPRODUCTION_GUIDE.md
logs/: conv_bce_cub_conv5_3_40.csv  conv_bce_flowers_conv5_3_20.csv  conv_euclidean_flowers_conv5_3_20.csv  conv_hinge_cub_conv5_3_40.csv  conv_hinge_flowers_conv5_3_20.csv  fc_bce_cub_fc_0_tr0.5.csv  fc_bce_cub_fc_40.csv  fc_bce_cub_fc_40_bbdensenet121_fcpenultimate.csv  fc_bce_cub_fc_40_bbresnet50_fcpenultimate.csv  fc_bce_flowers_fc_0_tr0.5.csv  fc_bce_flowers_fc_20.csv  fc_conv_bce_cub_conv4_3_40.csv  fc_conv_bce_cub_conv5_3_0_tr0.5.csv  fc_conv_bce_cub_conv5_3_40.csv  fc_conv_bce_cub_conv5_3_40_bbdensenet121.csv  fc_conv_bce_cub_conv5_3_40_bbdensenet121_fcpenultimate.csv  fc_conv_bce_cub_conv5_3_40_bbresnet50.csv  fc_conv_bce_cub_conv5_3_40_bbresnet50_fcpenultimate.csv  fc_conv_bce_cub_conv5_3_40_clip0.1.csv  fc_conv_bce_cub_conv5_3_40_teclip.csv  fc_conv_bce_cub_conv5_3_40_teclip_multi.csv  fc_conv_bce_cub_conv5_3_40_tesbert.csv  fc_conv_bce_cub_conv5_3_40_tesbert_multi.csv  fc_conv_bce_cub_pool5_40.csv  fc_conv_bce_flowers_conv5_3_0_tr0.5.csv  fc_conv_bce_flowers_conv5_3_20.csv  fc_conv_euclidean_cub_conv5_3_40.csv  fc_conv_euclidean_flowers_conv5_3_20.csv  fc_conv_hinge_cub_conv5_3_40.csv  (+5 more)
(+38 files in other folders)
