[project]
name = "zero-shot-cnn"
version = "0.1.0"
description = "From-scratch PyTorch reproduction of Ba et al.'s ICCV 2015 zero-shot CNN approach using textual class descriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-learn>=1.0",
    "Pillow>=9.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "kagglehub>=0.2.0",
    "gdown>=5.2.1",
    "sentence-transformers>=5.3.0",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
